# SVL

./: .gitignore  .gitmodules  README.md
SVL/: CMakeLists.txt  SVL.h.in  definitions.h.in
SVL Demo/: CMakeLists.txt
SVL Demo/Demo/: CMakeLists.txt
SVL Demo/Demo/src/Demo/: gui.cpp  gui.h  main.cpp  window.cpp  window.h
SVL Demo/resources/shaders/cubemap/: compile.bat  cubemap.frag  cubemap.vert  frag.spv  vert.spv
SVL Demo/resources/shaders/object/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
SVL/SVLcore/: CMakeLists.txt
SVL/SVLcore/src/SVLcore/SVL/common/: ErrorHandler.h
SVL/SVLcore/src/SVLcore/SVL/graphics/: camera.cpp  camera.h  command.cpp  command.h  image.cpp  image.h  layer.cpp  layer.h  light.h  material.cpp  material.h  mesh.h  model.cpp  model.h  object.cpp  object.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  texture.cpp  texture.h  tools.cpp  tools.h  vertex.cpp  vertex.h  window.cpp  window.h
SVL/SVLloader/: CMakeLists.txt
SVL/SVLloader/src/SVLloader/SVL/loader/: assimp_loader.cpp  gltf_loader.cpp  img_loader.cpp  ktx_loader.cpp  loader.cpp  loader.h  obj_loader.cpp
